login page, page unavailabilty added, error handled, client and server side login functionality added

--- a/client/src/Apps/App.css
+++ b/client/src/Apps/App.css
@@ -68,3 +68,15 @@ th.ant-table-cell{
   cursor: pointer;
 }
 
+.page-not-found{
+  display: flex;
+  flex-direction: column;
+  margin-top: 80px;
+  align-items: center;
+  justify-content: center;
+}
+
+.ant-form-item-label{
+  color: white;
+}
+
